# AirInk-Zephyr

./: .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf
apps/matter/: CMakeLists.txt  Kconfig.sysbuild  README.md  power.conf  prj.conf
apps/matter/boards/: promicro_nrf52840_nrf52840.overlay
apps/matter/src/: app_task.cpp  app_task.h  chip_project_config.h
apps/matter/src/default_zap/: airink.matter  airink.zap
apps/matter/src/default_zap/zap-generated/: CodeDrivenCallback.h  CodeDrivenInitShutdown.cpp  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
apps/matter/tools/: zap_regen.ps1
apps/standalone/: CMakeLists.txt  app.overlay  prj.conf
apps/standalone/bench/: batt_seed.cpp  power_test.cpp  ui_power.cpp
bench/: batt_seed.cpp  power_test.cpp  ui_power.cpp
cmake/: airink_sources.cmake  airink_version.cmake
conf/: airink_hw.conf  release.conf
docs/: power-analysis.md
dts/: airink_flash.dtsi  airink_hw.dtsi
dts/bindings/display/: solomon,ssd1683.yaml
matter/: CMakeLists.txt  Kconfig  README.md  prj.conf  sysbuild.conf
matter/boards/: promicro_nrf52840_nrf52840.overlay
matter/src/: app_task.cpp  app_task.h
matter/src/default_zap/: airink.matter  airink.zap
matter/src/default_zap/zap-generated/: callback-stub.cpp  endpoint_config.h  gen_config.h
sim/: app_stubs.cpp  bmp_writer.h  build.ps1  lv_conf.h  png_writer.h  sim.cpp  sim_host.hpp  ui_platform_sim.cpp
sim/zephyr/: kernel.h
sim/zephyr/settings/: settings.h
src/: app.cpp  app.hpp  display_ui.cpp  display_ui.hpp  main.cpp  menu.cpp  menu.hpp  net.cpp  net.hpp  partial_test.cpp  power_test.cpp  prefs.cpp  prefs.hpp  ui_platform.hpp  ui_platform_zephyr.cpp  version.hpp
src/app/: sensorview.cpp  sensorview.hpp
src/drivers/: ssd16xx.c
src/fonts/: README.md  b612_14.c  b612_16.c  b612_28.c  b612_48.c  dseg7_18.c  dseg7_48.c
src/input/: button.cpp  button.hpp
src/sensors/: battery.cpp  battery.hpp  battery_curve.hpp  scd41.cpp  scd41.hpp
src/ui/: display_ui.cpp  display_ui.hpp  quantize.hpp  temp_unit.hpp  ui_platform.cpp  ui_platform.hpp
src/util/: ema.hpp
tests/: check.hpp  main.cpp  run.ps1  test_battery_curve.cpp  test_ema.cpp  test_quantize.cpp
tools/: flash.ps1
tools/reset_bridge_esp32c3/: reset_bridge_esp32c3.ino
